syntax = "proto3";

package apibara.quota.v1;

service Quota {
  rpc Check(CheckRequest) returns (CheckResponse) {};
  rpc UpdateAndCheck(UpdateAndCheckRequest) returns (UpdateAndCheckResponse) {};
}

enum QuotaStatus {
  QUOTA_STATUS_UNKNOWN = 0;
  QUOTA_STATUS_OK = 1;
  QUOTA_STATUS_EXCEEDED = 2;
}

message CheckRequest {
  string team_name = 1;
  optional string client_name = 2;
  string network = 3;
}

message CheckResponse {
  QuotaStatus status = 1;
}

message UpdateAndCheckRequest {
  string team_name = 1;
  optional string client_name = 2;
  string network = 3;
  uint64 data_units = 4;
}

message UpdateAndCheckResponse {
  QuotaStatus status = 1;
}

